@@ -814,7 +814,7 @@ static void Handle_events
 			int x, y;// Check for 'stuck' Avatar.
 			if (!gwin->is_moving()) //  &&
 #if 0
-			    !((gwin->get_walk_after_teleport() && GAME_SI) ? false : gwin->was_teleported()))
+			    !((gwin->get_walk_after_teleport() && GAME_SI) ? false : gwin->was_teleported())
 #endif
 				{
 				int ms = SDL_GetMouseState(&x, &y);
@@ -984,11 +984,13 @@ static void Handle_event
 				Mouse::mouse->set_speed_cursor();
 				break;
 				}
-			last_b1_click = curtime;
-			if (!click_handled)
+			if (!click_handled) {
+				last_b1_click = curtime;
+
 					// Identify item(s) clicked on.
 				gwin->show_items(x, y, 
 					(SDL_GetModState() & KMOD_CTRL) != 0);
+			}
 			dragging = false;
 			}
 		break;
