@@ -1,3 +1,6 @@
+2002-07-08  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
+	* exult.cc: don't count dragging for double clicks
+
 2002-07-07  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 	* ucinternal.cc: allow small changes to loop-array in mid-loop in SI
 	* effects.*: 'backported' delayed-blast fix from main branch
